--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>MathFormulas</title>
-        <link href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\Project 2\css\style.css" rel="stylesheet">
-        <script src="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\Project 2\Js\script.js"></script>
+        <link href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\mathformulas\css\style.css" rel="stylesheet">
+        <script src="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\mathformulas\Js\script.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
