--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <body>
         <div class="background">
         <h1 id="title1">Welcome to the MathFormulas</h1>
-        <a href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\Project 2\index.html" style="color: black;"><h5 id="quadratic_formula">Quadratic Formula</h5></a>
+        <a href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\mathformulas\index.html" style="color: black;"><h5 id="quadratic_formula">Quadratic Formula</h5></a>
+        <a href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\mathformulas\pythagorean_theorem.html" style="color: black;"><h5 id="pythagorean_theorem">Pythagorean theorem</h5></a>
         </div>
         <div id="principal">
             <p id="text_equation">Enter the value of <strong>a</strong>,<strong>b</strong> and <strong>c</strong></p>
