--- a/pythagorean_theorem.html
+++ b/pythagorean_theorem.html
@@ -10,8 +10,8 @@
     <body>
         <div class="background">
         <h1 id="title1">Welcome to the MathFormulas</h1>
-        <a href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\mathformulas\index.html" style="color: black;"><h5 id="quadratic_formula">Quadratic Formula</h5></a>
-        <a href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\mathformulas\pythagorean_theorem.html" style="color: black;"><h5 id="pythagorean_theorem">Pythagorean theorem</h5></a>
+        <h5 id="quadratic_formula"><a href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\mathformulas\index.html" style="color: black;">Quadratic Formula</a></h5>
+        <h5 id="pythagorean_theorem"><a href="C:\Users\RODRIGOSALESFREIREDO\Desktop\scripts\mathformulas\pythagorean_theorem.html" style="color: black;">Pythagorean theorem</a></h5>
         </div>
         <div>
             Pythagorean theorem
