--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>MathFormulas</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="Js/script.js"></script>
