--- a/pythagorean_theorem.html
+++ b/pythagorean_theorem.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=500, initial-scale=1">
         <title>MathFormulas</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="Js/script.js"></script>
