--- a/pythagorean_theorem.html
+++ b/pythagorean_theorem.html
@@ -15,7 +15,7 @@
         <h5 id="pythagorean_theorem"><a href="pythagorean_theorem.html" style="color: black;">Pythagorean theorem</a></h5>
         </div>
         <div>
-            Pythagorean theorem
+            <h1 style="position: relative; text-align: center;">Coming Soon</h1>
         </div>
     </body>  
 </html>
