--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=500, initial-scale=1">
         <title>MathFormulas</title>
         <link href="css/style.css" rel="stylesheet">
-        <script src="Js/script.js"></script>
+        <script src="Js/script1.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
         <div class="background">
-        <h1 id="title1">Welcome to the MathFormulas</h1>
-        <a href="index.html" style="color: black;"><h5 id="quadratic_formula">Quadratic Formula</h5></a>
-        <a href="pythagorean_theorem.html" style="color: black;"><h5 id="pythagorean_theorem">Pythagorean theorem</h5></a>
+            <h1 id="title1">Welcome to the MathFormulas</h1>
+            <a href="index.html" style="color: black;"><h5 id="quadratic_formula">Quadratic Formula</h5></a>
+            <a href="pythagorean_theorem.html" style="color: black;"><h5 id="pythagorean_theorem">Pythagorean theorem</h5></a>
         </div>
-        <div id="principal">
+        <div id="principal0">
             <p id="text_equation">Enter the value of <strong>a</strong>,<strong>b</strong> and <strong>c</strong></p>
             <p id="text_equation">ax<sup>2</sup> + bx + c = 0</p>
             <form class="mb-3" name="form_1" action="javascript:validate();" style="text-align: center; height: 500px;">
