--- a/pythagorean_theorem.html
+++ b/pythagorean_theorem.html
@@ -5,17 +5,38 @@
         <meta name="viewport" content="width=500, initial-scale=1">
         <title>MathFormulas</title>
         <link href="css/style.css" rel="stylesheet">
-        <script src="Js/script.js"></script>
+        <link href="css/style2.css" rel="stylesheet">
+        <script src="Js/script2.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
         <div class="background">
-        <h1 id="title1">Welcome to the MathFormulas</h1>
-        <h5 id="quadratic_formula"><a href="index.html" style="color: black;">Quadratic Formula</a></h5>
-        <h5 id="pythagorean_theorem"><a href="pythagorean_theorem.html" style="color: black;">Pythagorean theorem</a></h5>
+            <h1 id="title1">Welcome to the MathFormulas</h1>
+            <a href="index.html" style="color: black;"><h5 id="quadratic_formula">Quadratic Formula</h5></a>
+            <a href="pythagorean_theorem.html" style="color: black;"><h5 id="pythagorean_theorem">Pythagorean theorem</h5></a>
         </div>
-        <div>
-            <h1 style="position: relative; text-align: center;">Coming Soon</h1>
+        <div id="principal1">
+            <div id="triangle-bottomleft"></div>
+            <form class="mb-3" name="form_2" action="javascript:pythagorean();" style="text-align: center; height: 500px;">
+                <div>
+                    <input class="form-control" type="number" id="input3" placeholder="a" name="number_pythagorean_a" min="0"> 
+                </div>
+                <br>
+                <div>
+                    <input class="form-control" type="number" id="input4" placeholder="b" name="number_pythagorean_b" min="0"> 
+                </div>
+                <br>
+                <div>
+                    <input class="form-control" type="number" id="input5" placeholder="c" name="number_pythagorean_c" min="0"> 
+                </div>
+                <br><br><br><br>
+                <div>
+                    <input class="btn btn-primary" id="submit2" type="submit" value="Calculate" name="final">
+                </div>
+            </form>
+            <p id="a">a</p>
+            <p id="b">b</p>
+            <p id="c">c</p>
         </div>
     </body>  
 </html>
