--- a/pythagorean_theorem.html
+++ b/pythagorean_theorem.html
@@ -6,7 +6,7 @@
         <title>MathFormulas</title>
         <link href="css/style.css" rel="stylesheet">
         <link href="css/style2.css" rel="stylesheet">
-        <script src="Js/script2.js"></script>
+        <script src="js/script2.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
