--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=500, initial-scale=1">
         <title>MathFormulas</title>
         <link href="css/style.css" rel="stylesheet">
-        <script src="Js/script1.js"></script>
+        <link href="css/style2.css" rel="stylesheet">
+        <script src="js/script1.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
