--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=500, initial-scale=1">
         <title>MathFormulas</title>
         <link href="css/style.css" rel="stylesheet">
-        <link href="css/style2.css" rel="stylesheet">
         <script src="js/script1.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
@@ -14,6 +13,8 @@
             <h1 id="title1">Welcome to the MathFormulas</h1>
             <a href="index.html" style="color: black;"><h5 id="quadratic_formula">Quadratic Formula</h5></a>
             <a href="pythagorean_theorem.html" style="color: black;"><h5 id="pythagorean_theorem">Pythagorean theorem</h5></a>
+            <a href="logarithm.html" style="color: black;"><h5 id="logarithm">Logarithm</h5></a>
+            <a href="percentage.html" style="color: black;"><h5 id="percentage">Percentage</h5></a>
         </div>
         <div id="principal0">
             <p id="text_equation">Enter the value of <strong>a</strong>,<strong>b</strong> and <strong>c</strong></p>
