--- a/logarithm.html
+++ b/logarithm.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=500, initial-scale=1">
         <title>MathFormulas</title>
         <link href="css/style.css" rel="stylesheet">
-        <link href="css/style2.css" rel="stylesheet">
-        <script src="js/script2.js"></script>
+        <link href="css/style3.css" rel="stylesheet">
+        <script src="js/script3.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
@@ -17,28 +17,25 @@
             <a href="logarithm.html" style="color: black;"><h5 id="logarithm">Logarithm</h5></a>
             <a href="percentage.html" style="color: black;"><h5 id="percentage">Percentage</h5></a>
         </div>
-        <div id="principal1">
-            <div id="triangle-bottomleft"></div>
-            <form class="mb-3" name="form_2" action="javascript:pythagorean();" style="text-align: center; height: 500px;">
+        <h1 style="text-align: center;">Coming Soon</h1>
+        <!--
+        <div id="principal2">
+            <form class="mb-3" name="form_3" action="javascript:logarithm();" style="text-align: center; height: 500px;">
                 <div>
-                    <input class="form-control" type="number" id="input3" placeholder="a" name="number_pythagorean_a" min="0"> 
+                    <input class="form-control" type="number" id="input5" placeholder="a" name="a_logarithm" min="0"> 
                 </div>
                 <br>
                 <div>
-                    <input class="form-control" type="number" id="input4" placeholder="b" name="number_pythagorean_b" min="0"> 
+                    <input class="form-control" type="number" id="input6" placeholder="b" name="b_logarithm" min="0"> 
                 </div>
                 <br>
-                <div>
-                    <input class="form-control" type="number" id="input5" placeholder="c" name="number_pythagorean_c" min="0"> 
-                </div>
                 <br><br><br><br>
                 <div>
-                    <input class="btn btn-primary" id="submit2" type="submit" value="Calculate" name="final">
+                    <input class="btn btn-primary" id="submit3" type="submit" value="Calculate" name="final">
                 </div>
             </form>
-            <p id="a">a</p>
-            <p id="b">b</p>
-            <p id="c">c</p>
+            <p id="x">x</p>
+            <textarea id="x_area" name="x_area"></textarea> -->
         </div>
     </body>  
 </html>
