--- a/pythagorean_theorem.html
+++ b/pythagorean_theorem.html
@@ -19,6 +19,7 @@
             <a href="percentage.html" style="color: black;"><h5 id="percentage">Percentage</h5></a> 
         </div>
         <div id="principal1">
+            <h4 id="main_text">Insert the values you have and leave the value you want to find empty</h4>
             <div id="triangle-bottomleft"></div>
             <form class="mb-3" name="form_2" action="javascript:pythagorean();" style="text-align: center; height: 500px;">
                 <div>
